--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,15 @@
   quotes: none;
 }
 
+title {
+  font-family: "Chalkboard", cursive;
+  background-color: black;
+  color: white;
+  font-size: 40px;
+  text-align: center;
+  padding-bottom: 40px;
+}
+
 .wrapper {
   width: 100vw;
   height: 100vh;
@@ -27,8 +36,11 @@
   font-family: "Chalkboard", cursive;
   line-height: 2.5rem;
 
-  font-size: 12px;
-  letter-spacing: 4px;
+  font-size: 20px;
+}
+
+select {
+  margin: 10px;
 }
 
 .blue {
